# scoria

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_RU.md  Cargo.toml  Makefile  README.md  README_RU.md  build.rs  cliff.github.toml  cliff.toml  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.cargo/: config.toml
.github/actions/unix-package/: action.yml
.github/actions/windows-package/: action.yml
.github/workflows/: ci.yml  release-dry-run.yml  release.yml
assets/: scoria.desktop
assets/macos/: Info.plist
assets/macos/Resources/: scoria.icns
docs/: release.md  smoke-tests.md
packaging/windows/: app.manifest  create_desktop_shortcut.vbs  scoria.wxs
scripts/smoke/: linux.sh  macos.sh  windows.ps1
scripts/windows/: gen-winget-manifests.ps1
src/: clipboard.rs  config.rs  lib.rs  main.rs  settings_gui.rs  settings_macos.rs  tray.rs  update.rs  vault.rs
src/app/: mod.rs
src/app/tray/: actions.rs  hotkey_reg.rs  icon.rs  menu.rs  mod.rs  notify.rs  watch.rs
src/engine/: autostart.rs  autostart_tests.rs  clipboard.rs  clipboard_tests.rs  config.rs  config_tests.rs  hotkey.rs  hotkey_tests.rs  mod.rs  path_safety.rs  settings.rs  settings_tests.rs  update.rs  update_tests.rs  vault.rs  vault_tests.rs
src/i18n/: en.rs  i18n_tests.rs  mod.rs  ru.rs
src/ui/: gtk.rs  macos.rs  mod.rs  windows.rs
